--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ mypy = "^1.18.2"
 black = "^25.9.0"
 isort = "^7.0.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^7.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
