--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ isort = "^7.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^7.0.0"
+pytest = "^9.0.1"
 
 [build-system]
 requires = ["poetry-core"]
