--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 python-dotenv = "^1.2.1"
+requests = "^2.32.5"
 
 
 [tool.poetry.group.lint.dependencies]
@@ -20,6 +21,7 @@ isort = "^7.0.0"
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^7.0.0"
 pytest = "^9.0.1"
+types-requests = "^2.32.4.20250913"
 
 [build-system]
 requires = ["poetry-core"]
@@ -30,6 +32,10 @@ disallow_untyped_defs = true
 no_implicit_optional = true
 warn_return_any = true
 exclude = 'venv'
+
+[[tool.mypy.overrides]]
+module = ["dotenv"]
+ignore_missing_imports = true
 
 [tool.black]
 line-length = 119
