--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ isort = "^7.0.0"
 pytest-cov = "^7.0.0"
 pytest = "^9.0.1"
 types-requests = "^2.32.4.20250913"
+mypy = "^1.19.0"
 
 [build-system]
 requires = ["poetry-core"]
