--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ include = ["logs/"]
 python = "^3.13"
 python-dotenv = "^1.2.1"
 requests = "^2.32.5"
+pandas = "^2.3.3"
+openpyxl = "^3.1.5"
 
 
 [tool.poetry.group.lint.dependencies]
@@ -24,6 +26,7 @@ pytest-cov = "^7.0.0"
 pytest = "^9.0.1"
 types-requests = "^2.32.4.20250913"
 mypy = "^1.19.0"
+pandas-stubs = "^2.3.3.251201"
 
 [build-system]
 requires = ["poetry-core"]
